--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ chrono-tz = "0.10"
 clap = { version = "4.5", features = ["derive"] }
 cron = "0.15"
 dirs = "5.0"
+fastembed = "4"
 fastrand = "2.0"
 form_urlencoded = "1.2"
 futures-util = "0.3"
